📫 added-contact-me

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" height="30" alt="figma logo" />
                  <span class="name-languages">• Figma</span> - Criação de interfaces, protótipos e organização visual de projetos
             </div>
+            <section id="contato">
+                <h2>📫 Entre em contato comigo</h2>
+                <div class="contatos">
+                <ul>
+                </div>
+                    <li>
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" height="30" alt="linkedin logo"  />
+                        <a id="linkedin" href=https://www.linkedin.com/in/jo%C3%A3o-rodrigo-ferreira-freire-a6b23b319/ target="_blank">• Linkedin</a></li>
+                    </li>
+                    <li>
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" height="30" alt="github logo"  />
+                        <a id="linkedin" href=https://github.com/JoaoBruto target="_blank">• GitHub</a></li>
+                    </li>
+                    <li>
+                        <img src="https://skillicons.dev/icons?i=instagram" height="30" alt="instagram logo"/>
+                        <a id="linkedin" href=https://www.instagram.com/_joaoroodrigo/ target="_blank">• Instagram</a></li>
+                    </li>
+                </ul>
+            </section>
         </div>
         </p>
     </div>
