🧩 | Organização do código (Pretendo fazer mais mudanças)

--- a/index.html
+++ b/index.html
@@ -14,47 +14,53 @@
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Conteúdo principal-->
     <div class="conteudo">
     <div class="titulo">
         <h1 class="titulo"><img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="60"> Olá! Seja bem-vindo ao meu portfólio!</h1> <br>
     </div>
-    <div class="titulo2">
-        <h2 class="titulo2">João Rodrigo Ferreira Freire</h2> 
+    <div class="meu-nome">
+        <h2 class="meu-nome">João Rodrigo Ferreira Freire</h2> <!--Meu nome-->
     </div>
     <div>
-        <img class="minha-foto" src="video-de-fundo/image.png" > 
+        <img class="minha-foto" src="video-de-fundo/image.png" > <!--Minha foto (Pretendo fazer mudanças)-->
     </div>
     <div id="apresentacao">
         <p>Sou um jovem desenvolvedor de 16 anos com base sólida em HTML e CSS, além de conhecimentos em JavaScript e Python. <br> Atualmente estou focado em front-end, mas pretendo explorar o back-end e aprender Java no futuro.<br>  Estou sempre buscando evoluir e criar projetos que mostrem minha dedicação e crescimento na área.</p>
+    <!---->
+        <!--Minhas habilidades-->
         <p id="my-skills">
-            🛠️ Minhas habilidades
+            🛠️ Minhas habilidades <!--Titulo-->
         </p>
         <div class="skills">
         <p class="languages">
             <div class="skill">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" height="30" alt="html5 logo" alt="HTML" />
-             <span class="name-languages">• HTML5</span> - Estruturação de páginas web com semântica e boas práticas <br>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" height="30" alt="html5 logo" alt="HTML" /> <!--Define img do HTML-->
+             <span class="name-languages">• HTML5</span> - Estruturação de páginas web com semântica e boas práticas <br> <!--Define breve descrição sobre a linguagem-->
             </div>
             <div class="skill">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" height="30" alt="css3 logo" alt="CSS" />
-             <span class="name-languages">• CSS3</span> - Estilização moderna, uso de Flexbox, responsividade básica
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" height="30" alt="css3 logo" alt="CSS" /> <!--Define img do CSS-->
+             <span class="name-languages">• CSS3</span> - Estilização moderna, uso de Flexbox, responsividade básica  e animações. <!--Define breve descrição sobre a linguagem-->  
             </div>
             <div class="skill">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="30" alt="javascript logo" height="30" alt="css3 logo" alt="CSS" />
-                 <span class="name-languages">• JavaScript</span> - Manipulação de elementos da página e lógica de programação.
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="30" alt="javascript logo" height="30" alt="css3 logo" alt="CSS" /> <!--Define img do JavaScript-->
+                 <span class="name-languages">• JavaScript</span> - Manipulação de elementos da página e lógica de programação. <!--Define breve descrição sobre a linguagem-->
             </div>
             <div class="skill">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" height="30" alt="python logo"  />
-                 <span class="name-languages">• Python</span> - Algoritmos, lógica de programação e pequenos projetos.
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" height="30" alt="python logo"  /> <!--Define img do Python-->
+                 <span class="name-languages">• Python</span> - Algoritmos, lógica de programação e pequenos projetos. <!--Define breve descrição sobre a linguagem-->
             </div>
             <div class="skill">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" height="30" alt="git logo"  />
-                 <span class="name-languages">• Git & GitHub</span> - Controle de versão e publicação de projetos.
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" height="30" alt="git logo"  /> <!--Define img do Git-->
+                 <span class="name-languages">• Git & GitHub</span> - Controle de versão e publicação de projetos.  <!--Define breve descrição sobre a linguagem-->
             </div>
             <div class="skill">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" height="30" alt="figma logo" />
-                 <span class="name-languages">• Figma</span> - Criação de interfaces, protótipos e organização visual de projetos
-            </div>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" height="30" alt="figma logo" /> <!--Define img do Figma-->
+                 <span class="name-languages">• Figma</span> - Criação de interfaces, protótipos e organização visual de projetos <!--Define breve descrição sobre a linguagem-->
+            </div> 
+        <!---->
+
+            <!--Entre em contanto comigo-->
             <section id="contato">
                 <h2>📫 Entre em contato comigo</h2>
                 <div class="contatos">
@@ -74,6 +80,7 @@
                     </li>
                 </ul>
             </section>
+            <!---->
         </div>
         </p>
     </div>
