✨ Mudança da foto de perfil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2 class="meu-nome">João Rodrigo Ferreira Freire</h2> <!--Meu nome-->
     </div>
     <div>
-        <img class="minha-foto" src="video-de-fundo/image.png" > <!--Minha foto (Pretendo fazer mudanças)-->
+        <img class="minha-foto" src="video-de-fundo/Professional Studio Portrait.png" > <!--Minha foto (Pretendo fazer mudanças)-->
     </div>
     <div id="apresentacao">
         <p>Sou um jovem desenvolvedor de 16 anos com base sólida em HTML e CSS, além de conhecimentos em JavaScript e Python. <br> Atualmente estou focado em front-end, mas pretendo explorar o back-end e aprender Java no futuro.<br>  Estou sempre buscando evoluir e criar projetos que mostrem minha dedicação e crescimento na área.</p>
