--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
 
              <section>
                 <div>
-                    <h1 id="nome">Olá, eu sou o <span class="destaque">João Rodrigo</span>
-                    </h1>
+                    <h1 id="nome">Olá, eu sou o <span class="destaque">João Rodrigo</span></h1>
+                
+            <!-- HABILIDADES  -->
+                <ul class="habilidades">
+                    <li>
+                        <img src="assets/icons/HTML-icon.png" alt="HTML" loading="lazy"/>
+
+                        <img src="assets/icons/css-removebg-preview.png" alt="CSS" loading="lazy"/>
+                    </li>
+                </ul>    
                 </div>
              </section>
         </main>
