✨ Adding icons and styling

--- a/index.html
+++ b/index.html
@@ -35,8 +35,23 @@
                 <ul class="habilidades">
                     <li>
                         <img src="assets/icons/HTML-icon.png" alt="HTML" loading="lazy"/>
-
-                        <img src="assets/icons/css-removebg-preview.png" alt="CSS" loading="lazy"/>
+                        <span class="tooltip">HTML</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/CSS-icon.png" alt="CSS" loading="lazy"/>
+                        <span class="tooltip">CSS</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/JS-icon.png" alt="JavaScript" loading="lazy"/>
+                        <span class="tooltip">JavaScript</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/REACT-icon.png" alt="React" loading="lazy"/>
+                        <span class="tooltip">ReactJs</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/FIGMA-icon.png" alt="Figma" loading="lazy"/>
+                        <span class="tooltip">Figma</span>
                     </li>
                 </ul>    
                 </div>
