✨ Creation and styling of the About tab.

--- a/index.html
+++ b/index.html
@@ -53,10 +53,39 @@
                         <img src="assets/icons/FIGMA-icon.png" alt="Figma" loading="lazy"/>
                         <span class="tooltip">Figma</span>
                     </li>
+                    <li>
+                        <img src="assets/icons/GIT-icon.png" alt="GIT" loading="lazy"/>
+                        <span class="tooltip">GIT</span>
+                    </li>
                 </ul>    
                 </div>
              </section>
         </main>
+
+        <section class="sobre">
+            <h2>Sobre Mim</h2>
+            <p>Sou o João Rodrigo, de 17 anos, de Goiás. Amo tecnologia e desenvolvimento web. Estou sempre em busca de novos desafios e oportunidades para crescer profissionalmente. Minhas habilidades incluem HTML, CSS, JavaScript e React. Além disso, tenho conhecimentos em ferramentas como Figma e Git. Meu nivel de inglês é intermediário. E sempre estou disposto a aprender novas tecnologias e me desafiar em projetos inovadores.</p>
+
+            <table>
+                <tbody>
+                    <tr>
+                        <th scope="row">Idade:</th>
+                        <td>17 anos</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Localização:</th>
+                        <td>Anapolis-GO, Brasil</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Telefone:</th>
+                        <td>(62) 99131-1736</td>
+                    </tr>   
+                    <tr>
+                        <th scope="row">Email:</th>
+                        <td>joaofreire151208@gmail.com</td>
+                </tbody>
+            </table>
+        </section>
      </div>
 </body>
 <body>
